// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' stable asset > swap > events 1`] = `
[
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "DOT",
      },
      "from": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "to": "23M5ttkp2zdM8qa6LFak4BySWZDsAVByjepAfr7kt929S1U9",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "LDOT",
      },
      "from": "23M5ttkp2zdM8qa6LFak4BySWZDsAVByjepAfr7kt929S1U9",
      "to": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "23AdbsfTWCWtRFweQF4f3iZLcLBPwSHci9CXuMhqFirZmUZj",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "inputAmount": "(number)",
      "inputAsset": {
        "Token": "DOT",
      },
      "minOutputAmount": "(number)",
      "outputAmount": "(number)",
      "outputAsset": {
        "Token": "LDOT",
      },
      "poolId": "(number)",
      "swapper": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "totalSupply": "(number)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`'acala' stable asset > with liquidity > 'redeemProportion' > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "DOT",
      },
      "from": "23M5ttkp2zdM8qa6LFak4BySWZDsAVByjepAfr7kt929S1U9",
      "to": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "LDOT",
      },
      "from": "23M5ttkp2zdM8qa6LFak4BySWZDsAVByjepAfr7kt929S1U9",
      "to": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "from": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "to": "23AdbsfTWCWtRFweQF4f3iZLcLBPwSHci9CXuMhqFirZmUZj",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "23AdbsfTWCWtRFweQF4f3iZLcLBPwSHci9CXuMhqFirZmUZj",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "amount": "(number)",
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "newTotalSupply": "(number)",
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "oldTotalSupply": "(number)",
      "poolId": "(number)",
      "who": "23AdbsfTWCWtRFweQF4f3iZLcLBPwSHci9CXuMhqFirZmUZj",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmount": "(number)",
      "minOutputAmounts": [
        "(number)",
        "(number)",
      ],
      "outputAmounts": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
      "redeemer": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "totalSupply": "(number)",
    },
    "method": "RedeemedProportion",
    "section": "stableAsset",
  },
]
`;

exports[`'acala' stable asset > with liquidity > 'stableAssetRedeemSingle' > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "from": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "to": "23AdbsfTWCWtRFweQF4f3iZLcLBPwSHci9CXuMhqFirZmUZj",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "DOT",
      },
      "from": "23M5ttkp2zdM8qa6LFak4BySWZDsAVByjepAfr7kt929S1U9",
      "to": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmount": "(number)",
      "minOutputAmount": "(number)",
      "outputAmount": "(number)",
      "outputAsset": {
        "Token": "DOT",
      },
      "poolId": "(number)",
      "redeemer": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "totalSupply": "(number)",
    },
    "method": "RedeemedSingle",
    "section": "stableAsset",
  },
]
`;

exports[`'acala' stable asset > with liquidity > mint > system events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmounts": [
        "(number)",
        "(number)",
      ],
      "minOutputAmount": "(number)",
      "minter": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      "outputAmount": "(number)",
      "poolId": "(number)",
      "totalSupply": "(number)",
    },
    "method": "Minted",
    "section": "stableAsset",
  },
]
`;

exports[`'karura' stable asset > swap > events 1`] = `
[
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "KSM",
      },
      "from": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "to": "qmmNug1GQstpimAXBphJPSbDawH47vwMmhuSUq9xRqAsDAr",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "LKSM",
      },
      "from": "qmmNug1GQstpimAXBphJPSbDawH47vwMmhuSUq9xRqAsDAr",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "inputAmount": "(number)",
      "inputAsset": {
        "Token": "KSM",
      },
      "minOutputAmount": "(number)",
      "outputAmount": "(number)",
      "outputAsset": {
        "Token": "LKSM",
      },
      "poolId": "(number)",
      "swapper": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(number)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`'karura' stable asset > with liquidity > 'redeemProportion' > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "KSM",
      },
      "from": "qmmNug1GQstpimAXBphJPSbDawH47vwMmhuSUq9xRqAsDAr",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "LKSM",
      },
      "from": "qmmNug1GQstpimAXBphJPSbDawH47vwMmhuSUq9xRqAsDAr",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "from": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "to": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "amount": "(number)",
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "newTotalSupply": "(number)",
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "oldTotalSupply": "(number)",
      "poolId": "(number)",
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmount": "(number)",
      "minOutputAmounts": [
        "(number)",
        "(number)",
      ],
      "outputAmounts": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(number)",
    },
    "method": "RedeemedProportion",
    "section": "stableAsset",
  },
]
`;

exports[`'karura' stable asset > with liquidity > 'stableAssetRedeemSingle' > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "from": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "to": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "Token": "KSM",
      },
      "from": "qmmNug1GQstpimAXBphJPSbDawH47vwMmhuSUq9xRqAsDAr",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transfer",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Withdrawn",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(number)",
      "currencyId": {
        "StableAssetPoolToken": "(number)",
      },
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "a": "(number)",
      "amount": "(number)",
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "newTotalSupply": "(number)",
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "oldTotalSupply": "(number)",
      "poolId": "(number)",
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmount": "(number)",
      "minOutputAmount": "(number)",
      "outputAmount": "(number)",
      "outputAsset": {
        "Token": "KSM",
      },
      "poolId": "(number)",
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(number)",
    },
    "method": "RedeemedSingle",
    "section": "stableAsset",
  },
]
`;

exports[`'karura' stable asset > with liquidity > mint > system events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(number)",
        "(number)",
      ],
      "oldBalances": [
        "(number)",
        "(number)",
      ],
      "poolId": "(number)",
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": "(number)",
      "balances": [
        "(number)",
        "(number)",
      ],
      "feeAmount": "(number)",
      "inputAmounts": [
        "(number)",
        "(number)",
      ],
      "minOutputAmount": "(number)",
      "minter": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "outputAmount": "(number)",
      "poolId": "(number)",
      "totalSupply": "(number)",
    },
    "method": "Minted",
    "section": "stableAsset",
  },
]
`;
